# parsec-playground

./: README.md
api/: parsec_playground.db  pyproject.toml  requirements.txt  test_websocket.py
api/app/: main.py  parsec_playground.db
api/app/db/: database.py  models.py
api/app/models/: schemas.py
api/app/routes/: analytics.py  generate.py  history.py  templates.py
api/app/services/: llm.py  streaming.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/lib/: api.ts  types.ts
